Some more spotbugs fixes.
Fixed warnings converning modifiable collections and maps.
filterchain subproject has all its warnings fixed and spotbugs fully reenabled.